--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
-    <script src="../node_modules/proj4leaflet/lib/leaflet/leaflet.js"></script>
-    <script src="../node_modules/proj4leaflet/lib/proj4.js"></script>
-    <script src="../node_modules/proj4leaflet/src/proj4leaflet.js"></script>
+    <script src="/node_modules/proj4leaflet/lib/leaflet/leaflet.js"></script>
+    <script src="/node_modules/proj4leaflet/lib/proj4.js"></script>
+    <script src="/node_modules/proj4leaflet/src/proj4leaflet.js"></script>
     <script src="/dist/main.js"></script>
     <script src="/node_modules\leaflet-contextmenu\dist/leaflet.contextmenu.js"></script>
 
