Fixed subdomain, domain and protocols in urls in index

--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="AWS Suitens Vis">
-    <meta name="author" content="Finn Jordal">
 
-    <title>DAWA's Vis</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="AWS Suitens Vis">
+  <meta name="author" content="Finn Jordal">
 
-    <link href="/css/style.css" rel="stylesheet">
+  <title>DAWA's Vis</title>
 
-  </head>
+  <link href="/css/style.css" rel="stylesheet">
 
-  <body>
-    <h1>vis.aws.dk</h1>
-    <p>Vis.aws.dk websitet præsenterer geografiske data fra <a href='http://dawa.aws.dk'>DAWA</a> på kort. Når man arbejder med DAWA kan det ofte give en bedre forståelse for data, hvis man ser dem på et kort. Til dette har vi udviklet Vis websitet. Alle data fra DAWA som indeholder geografiske data kan præsenteres på et kort via vis.aws.dk. </p>
-    <h2>Brug</h2>
-    <p>For at kunne bruge Vis skal du angive hvilke data fra DAWA, du ønsker præsenteret. Angivelsen af hvilke data du ønsker sker på samme måde som i DAWA. Hvis du f.eks. ønsker data fra DAWA om det nye postnummer i Nordhavn anvender du <a href='http://dawa.aws.dk/postnumre/2150'>http://dawa.aws.dk/postnumre/2150</a>. Hvis du vil have vist samme data på et kort erstatter du <em>dawa.aws.dk</em> med <em>vis.aws.dk</em> og får <a href='http://vis.aws.dk/postnumre/2150'>http://vis.aws.dk/postnumre/2150</a>.</p>
-    <p>Vis.aws.dk kan kun anvendes i de tilfælde, hvor DAWA returnerer GeoJSON. Du skal ikke angive GeoJSON formatet. Det sker automatisk.</p>
-    <h2>Eksempler</h2>
-    <h3>Adgangsadresser på Roskildevej</h3>
-    <p><a href='http://vis.aws.dk/adgangsadresser?vejnavn=Roskildevej'>http://vis.aws.dk/adgangsadresser?vejnavn=Roskildevej</a></p>
-    <h3>Frederiksberg postnumre</h3>
-    <p><a href='http://vis.aws.dk/postnumre?q=frederiksberg'>http://vis.aws.dk/postnumre?q=frederiksberg</a></p>
-    <h3>Adresser på 20. etage</h3>
-    <p><a href='http://vis.aws.dk/adresser?etage=20'>http://vis.aws.dk/adresser?etage=20</a></p>
-    <h3>Overskrift på popup</h3>
-    <p><a href='https://vis.aws.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true'>https://vis.aws.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true</a></p>
-    <h3>Andet baggrundskort</h3>
-    <p><a href='https://vis.aws.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true&kort=Sk%C3%A6rmkort%20-%20d%C3%A6mpet'>https://vis.aws.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true&kort=Sk%C3%A6rmkort%20-%20d%C3%A6mpet</a></p>
-    <h3>Flere lag</h3>
-    <p><a href='http://vis.aws.dk/multi?lag=[{"ressource":"postnumre","parametre":{"nr":3400}},{"ressource":"postnumre","parametre":{"nr":3320}},{"ressource":"vejstykker","parametre":{"kode":"0039","kommunekode":219}},{"ressource":"adgangsadresser","parametre":{"vejkode":"0039","kommunekode":219}}]'>http://vis.aws.dk/multi?lag=[{"ressource":"postnumre","parametre":{"nr":3400}},{"ressource":"postnumre","parametre":{"nr":3320}},{"ressource":"vejstykker","parametre":{"kode":"0039","kommunekode":219}},{"ressource":"adgangsadresser","parametre":{"vejkode":"0039","kommunekode":219}}]</a></p>
-    <br/>
+</head>
 
-   
-  
-  </body>
+<body>
+  <h1>vis.dataforsyningen.dk</h1>
+  <p>Vis.dataforsyningen.dk websitet præsenterer geografiske data fra <a href='https://api.dataforsyningen.dk'>DAWA</a> på kort. Når man
+    arbejder med DAWA kan det ofte give en bedre forståelse for data, hvis man ser dem på et kort. Til dette har vi
+    udviklet Vis websitet. Alle data fra DAWA som indeholder geografiske data kan præsenteres på et kort via vis.aws.dk.
+  </p>
+  <h2>Brug</h2>
+  <p>For at kunne bruge Vis skal du angive hvilke data fra DAWA, du ønsker præsenteret. Angivelsen af hvilke data du
+    ønsker sker på samme måde som i DAWA. Hvis du f.eks. ønsker data fra DAWA om det nye postnummer i Nordhavn anvender
+    du <a href='https://api.dataforsyningen.dk/postnumre/2150'>https://api.dataforsyningen.dk/postnumre/2150</a>. Hvis
+    du vil have vist samme
+    data på et kort erstatter du <em>api.dataforsyningen.dk</em> med <em>vis.dataforsyningen.dk</em> og får <a
+      href='https://vis.dataforsyningen.dk/postnumre/2150'>https://vis.dataforsyningen.dk/postnumre/2150</a>.</p>
+  <p>Vis.dataforsyningen.dk kan kun anvendes i de tilfælde, hvor DAWA returnerer GeoJSON. Du skal ikke angive GeoJSON
+    formatet. Det
+    sker automatisk.</p>
+  <h2>Eksempler</h2>
+  <h3>Adgangsadresser på Roskildevej</h3>
+  <p><a
+      href='https://vis.dataforsyningen.dk/adgangsadresser?vejnavn=Roskildevej'>https://vis.dataforsyningen.dk/adgangsadresser?vejnavn=Roskildevej</a>
+  </p>
+  <h3>Frederiksberg postnumre</h3>
+  <p><a
+      href='https://vis.dataforsyningen.dk/postnumre?q=frederiksberg'>https://vis.dataforsyningen.dk/postnumre?q=frederiksberg</a>
+  </p>
+  <h3>Adresser på 20. etage</h3>
+  <p><a href='https://vis.dataforsyningen.dk/adresser?etage=20'>https://vis.dataforsyningen.dk/adresser?etage=20</a></p>
+  <h3>Overskrift på popup</h3>
+  <p><a
+      href='https://vis.dataforsyningen.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true'>https://vis.dataforsyningen.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true</a>
+  </p>
+  <h3>Andet baggrundskort</h3>
+  <p><a
+      href='https://vis.dataforsyningen.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true&kort=Sk%C3%A6rmkort%20-%20d%C3%A6mpet'>https://vis.dataforsyningen.dk/adresser/95697f98-a3d8-44c4-a16f-cddc8d29a3a1?overskrift=SDFE&vispopup=true&kort=Sk%C3%A6rmkort%20-%20d%C3%A6mpet</a>
+  </p>
+  <h3>Flere lag</h3>
+  <p><a
+      href='https://vis.dataforsyningen.dk/multi?lag=[{"ressource":"postnumre","parametre":{"nr":3400}},{"ressource":"postnumre","parametre":{"nr":3320}},{"ressource":"vejstykker","parametre":{"kode":"0039","kommunekode":219}},{"ressource":"adgangsadresser","parametre":{"vejkode":"0039","kommunekode":219}}]'>https://vis.dataforsyningen.dk/multi?lag=[{"ressource":"postnumre","parametre":{"nr":3400}},{"ressource":"postnumre","parametre":{"nr":3320}},{"ressource":"vejstykker","parametre":{"kode":"0039","kommunekode":219}},{"ressource":"adgangsadresser","parametre":{"vejkode":"0039","kommunekode":219}}]</a>
+  </p>
+  <br />
+
+
+
+</body>
 
 </html>
