Fixed subdomain and domain in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1>vis.dataforsyningen.dk</h1>
-  <p>Vis.dataforsyningen.dk websitet præsenterer geografiske data fra <a href='https://api.dataforsyningen.dk'>DAWA</a> på kort. Når man
+  <p>Vis.dataforsyningen.dk websitet præsenterer geografiske data fra <a href='https://dawadocs.dataforsyningen.dk'>DAWA</a> på kort. Når man
     arbejder med DAWA kan det ofte give en bedre forståelse for data, hvis man ser dem på et kort. Til dette har vi
     udviklet Vis websitet. Alle data fra DAWA som indeholder geografiske data kan præsenteres på et kort via vis.aws.dk.
   </p>
