[+] siteimprove [x] cdn > local

--- a/public/multi.html
+++ b/public/multi.html
@@ -26,13 +26,28 @@
     <div id="map">
     </div>  
  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
+    <script src="/js/core.min.js"></script>
+    <script src="/js/fetch.min.js"></script>
     <script src="/node_modules/proj4leaflet/lib/leaflet/leaflet.js"></script>
     <script src="/node_modules/proj4leaflet/lib/proj4.js"></script>
     <script src="/node_modules/proj4leaflet/src/proj4leaflet.js"></script>
     <script src="/dist/multi.js"></script>
     <script src="/node_modules\leaflet-contextmenu\dist/leaflet.contextmenu.js"></script>
+
+  <script type="text/javascript">
+      /*<![CDATA[*/
+      (function() {
+          var sz = document.createElement('script');
+          sz.type = 'text/javascript';
+          sz.async = true;
+          sz.src = '//siteimproveanalytics.com/js/siteanalyze_6083803.js';
+  
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(sz, s);
+      })();
+      /*]]>*/
+  </script>
+
 
   </body>
 
